--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,6 +1,10 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+        connections:
+#            default:
+#                url: '%env(resolve:DATABASE_URL)%'
+            checkphone:
+                url: '%env(resolve:DATABASE_URL_CHECKPHONE)%'
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
