--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -16,7 +16,7 @@ framework:
     #fragments: true
     php_errors:
         log: true
-    error_controller: App\Controller\ExceptionController::index
+#    error_controller: App\Controller\ExceptionController::index
 
 when@test:
     framework:
